<resources>
    <string name="app_name">JobPlanet</string>

    <string name="text_search">Search</string>
    <string name="msg_input_keyword">Input keyword</string>
    <string name="msg_empty_keyword">Please enter the keyword.</string>
    <string name="msg_error">Server Connect Error.</string>

    <string name="text_salary_avg">평균연봉</string>
    <string name="text_currency">만원</string>
    <string name="text_interview_question">면접질문</string>
    <string name="text_pros">장점</string>
    <string name="text_cons">단점</string>
</resources>